[package]
name = "nat2"
version = "0.3.0"
edition = "2021"
description = "Expose your local service to Internet in full cone NAT network."
license = "MIT"
homepage = "https://github.com/koho/nat2"
repository = "https://github.com/koho/nat2.git"
readme = "README.md"

[dependencies]
anyhow = "1.0"
stun = "0.7.0"
tokio = { version = "1.39.3", features = ["signal", "process"] }
url = "2.5.2"
futures = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1.81"
ring = { version = "0.17", features = ["std"] }
hex = "0.4"
time = "0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3",  features = ["env-filter", "time", "local-time"] }
igd-next = { version = "0.15.1", features = ["aio_tokio"] }
local-ip-address = "0.6"
hostname = "0.4"
clap = { version = "4.5.20", features = ["derive"] }
